WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316532
font-synthesis: Synthetic bold not applied for variable font with explicit font-weight descriptor
https://bugs.webkit.org/show_bug.cgi?id=316532
Summary
font-synthesis: Synthetic bold not applied for variable font with explicit fo...
Vitor Roriz
Reported
2026-06-08 07:45:50 PDT
A variable font whose font-weight descriptor restricts it to normal no longer synthesizes bold after
314537@main
, because synthesis is suppressed whenever a wght axis is present. Only suppress when the descriptor is auto.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-06-08 07:45:58 PDT
<
rdar://problem/179001275
>
Vitor Roriz
Comment 2
2026-06-08 11:30:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66680
EWS
Comment 3
2026-06-09 07:59:34 PDT
Committed
314814@main
(fc7afbc7e662): <
https://commits.webkit.org/314814@main
> Reviewed commits have been landed. Closing PR #66680 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug