font-synthesis: Synthetic bold not applied for variable font with font-weight: normal https://bugs.webkit.org/show_bug.cgi?id=316532 rdar://179001275

Reviewed by Alan Baradlay.

After https://commits.webkit.org/314537@main, synthetic bold was suppressed for
any variable font with a wght axis. This regressed faces that explicitly declare
a non-bold font-weight, notably font-weight: normal: the descriptor pins the face
to a weight the clamped axis cannot make bold, so synthesis is still needed.
Faces that declare a bold-capable weight (for example font-weight: 700) were
unaffected, since the axis already provides bold. Therefore only suppress
synthesis when the font-weight descriptor is auto, letting the variable axis own
the weight in that case.

Spec: https://drafts.csswg.org/css-fonts-4/#font-prop-desc
Resolution: https://github.com/w3c/csswg-drafts/issues/7999

* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/variations/font-weight-3-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/variations/font-weight-3-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/variations/font-weight-3.html: Added.
* Source/WebCore/platform/graphics/FontCustomPlatformData.h:
(WebCore::computeSyntheticBold):

Canonical link: https://commits.webkit.org/314814@main